[package]
name = "anonymous-tokens-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonymous-tokens = { path = "../../ext/anonymous-tokens" }
bincode = "1.3.3"
pyo3 = { version = "0.18.2", features = ["extension-module"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "tokenlib"